--- a/igreja/style.css
+++ b/igreja/style.css
@@ -5,21 +5,28 @@ table{
 
 .cat{
     border: none;
-    text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+img{
+    background-color: black;
+    width: 100%;
+    height: auto;
 }
 
 .categoria{
     background-color: yellow;
+    border: 1px solid;
 }
 
 .preço{
     background-color: lightgreen;
+    border: 1px solid;
 }
 
 th{
     width: 100%;
     text-align: center;
-    border: 1px solid;
 }
 
 td{
